--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<ul>
 	<li> Typically black and white </li>
 	<li> Known for their tuxedo like coat. </li>
-	<li> Full of <strong> ENERGY!!! </strong> </li>
+	<li> Full of <strong> ENERGY! </strong> </li>
 	</ul>
 	</body>
 </html>
