Added second table.

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -26,5 +26,20 @@
 <td>New York, NY</td>
 </tr>
 </table>
+<br>
+<br>
+<table>
+	<tr>
+	<th>&nbsp;</th>
+	<th>Monday</th>
+	<th>Tuesday</th>
+	<th>Wednesday</th>
+	</tr>
+	<tr>
+	<td>1:00 PM</td>
+	<td>Homework</td>
+	<td rowspan="2">Meeting</td>
+	</tr>
+</table>
 </body>
 </html>
