Added additonal r/c and fixed errors.

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -28,7 +28,7 @@
 </table>
 <br>
 <br>
-<table>
+<table border=1>
 	<tr>
 	<th>&nbsp;</th>
 	<th>Monday</th>
@@ -37,8 +37,13 @@
 	</tr>
 	<tr>
 	<td>1:00 PM</td>
-	<td>Homework</td>
-	<td rowspan="2">Meeting</td>
+	<td rowspan="2">Homework</td>
+	<td colspan="2"> Meetings </td>
+	</tr>
+	<tr>
+	<td>2:00 PM</td>
+	<td>Dr. appt</td>
+	<td>Free time</td>
 	</tr>
 </table>
 </body>
