Added nav bars and images.

--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Contact Us</title>
 </head>
+<header>
+  <a href="index.html">Home</a>
+</header>
 <body>
 	<h1>Contact Us</h1>
 	<p>Contact Moon Bootz at <a href="Moonbootz@moon.com">this e-mail address</a></p>
