--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -3,10 +3,14 @@
 <head>
 	<title>Product Details</title>
 </head>
+<header>
+  <a href="index.html">Home</a>
+</header>
 <body>
 	<h1>Product Details</h1>
+	<img src="images/moon_bootz.jpg" alt="moon boots" />
 	<ul>
-		<li>Blue Laces</li>
+		<li>Pink Laces</li>
 		<li>Comfortable</li>
 		<li>Life time warranty</li>
 	</ul>
