Added css responsive-design.

--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Wildflowers Article</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <section id="external-links">
