--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -276,7 +276,7 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- Add your reflection here as a comment...... -->
   </body>
 </html>
 
